fix overflow page + duration transition detailPage

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -24,6 +24,10 @@ body {
   }
 }
 
+.overflow-hidden #app {
+  overflow: hidden;
+}
+
 .img-cover {
   object-fit: cover;
   width: 100%;
